--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "npmconf": "~0.1.6",
     "request": "~2.27.0",
     "npm-registry-client": "~0.2.30",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "shasum": "~1.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
+  "bin": "./bin.js",
   "author": "Dominic Tarr <dominic.tarr@gmail.com> (dominictarr.com)",
   "license": "MIT"
 }
