--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "request": "~2.27.0",
     "npm-registry-client": "~0.2.30",
     "mkdirp": "~0.3.5",
-    "shasum": "~1.0.0"
+    "shasum": "~1.0.0",
+    "npmd-pack": "~1.0.0",
+    "concat-stream": "~1.2.1"
   },
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
